--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     additional content.
                     This content is a little bit longer.</p>
                   <p>Full width:</p>
-                  <button class="btn" style="width:100%"><a href="https://ncert.nic.in/textbook/pdf/aerd1dd.zip"></a><i
+                  <button class="btn" style="width:100%"><a href="https://ncert.nic.in/textbook/pdf/aerd1dd.zip"><i
                         class="fa fa-download"></i> Download</a></button>
                 </div>
               </div>
